generator dziala, poprawiono import pane